objects/UIP__c.object
<CustomObject><fields>
        <fullName>ACADEMIC_YEAR__c</fullName>
        <label>Academic Year</label>
        <length>6</length>
        <type>Text</type>
    </fields><fields>
        <fullName>AMAO1_MEETS_EXP__c</fullName>
        <label>AMAO 1 Meets Expectations</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AMAO1_RATING__c</fullName>
        <label>AMAO 1 Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AMAO2_MEETS_EXP__c</fullName>
        <label>AMAO 2 Meets Expectations</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AMAO2_RATE__c</fullName>
        <label>AMAO 2 Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>AMAO3_MEETS_EXP__c</fullName>
        <label>AMAO 3 Meets Expectation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AMAO3_RATING_ELL_GRAD__c</fullName>
        <label>AMAO 3 Grad Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AMAO3_RATING_MATH__c</fullName>
        <label>AMAO 3 Math Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AMAO3_RATING_PARTIC__c</fullName>
        <label>AMAO 3 Participation Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AMAO3_RATING_READ__c</fullName>
        <label>AMAO 3 Read Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AMAO_3_Write_Rating__c</fullName>
        <label>AMAO 3 Write Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AU_NAME__c</fullName>
        <label>AU Name</label>
        <length>35</length>
        <type>Text</type>
    </fields><fields>
        <fullName>AU_Number__c</fullName>
        <label>AU Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>A_TTL_RATING_OFFICIAL__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited with Distinction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited with Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited with Priority Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited with Turnaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEC: Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEC: Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEC: Priority Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEC: Turnaround</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Addenda_Template_ID__c</fullName>
        <formula>IF(Turnaround_Complete__c=TRUE, "a0HF000000Mgq82,", "")&amp;""&amp;
IF(Title_I_School_Wide_Complete__c =TRUE, "a0HF000000Mgptt,", "")&amp;""&amp;
IF(TIG_Transformation_Complete__c=TRUE, "a0HF000000Mgpvf,", "")&amp;""&amp;
IF(TIG_Turnaround_Complete__c=TRUE, "a0HF000000MgpwO,", "")&amp;""&amp;
IF(TIG_Closure_Complete__c =TRUE, "a0HF000000Mgpxi,", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addenda Template ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>April_Timeline__c</fullName>
        <label>April Timeline</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Attachment_Count__c</fullName>
        <description>Created to track the number of attachments created</description>
        <label>Attachment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Biennial_Flex_Instructions__c</fullName>
        <description>Instructions for schools and districts regarding Biennial Flexibility</description>
        <inlineHelpText>Instructions for schools and districts regarding Biennial Flexibility</inlineHelpText>
        <label>Biennial Flex Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Biennial_Flex__c</fullName>
        <description>Districts or Schools with a Performance plan or higher are eligible for submission every other year.</description>
        <label>Biennial_Flex</label>
        <picklist>
            <picklistValues>
                <fullName>Eligible for Biennial Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Eligible for Biennial Submission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Biennial_Plan_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the District is eligible for a biennial UIP.</description>
        <inlineHelpText>Check this box if the District is eligible for a biennial UIP.</inlineHelpText>
        <label>Biennial Plan Eligible</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CADI_Description__c</fullName>
        <description>Has (or will) the district participated in a CADI review?  If so, when?</description>
        <inlineHelpText>Has (or will) the district participated in a CADI review?  If so, when?</inlineHelpText>
        <label>CADI Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>CGP_PLAN_DIRECTIONS__c</fullName>
        <label>CGP Plan Directions</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>CGP_PLAN_TYPE__c</fullName>
        <label>CGP Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Not a CGP Participating School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGP Systems Change School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGP Capacity Building School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGP Universal Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Colorado_Graduation_Pathways_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Colorado Graduation Pathways Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Combined_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box determines if a District or School will be submitting a Combined Plan.</description>
        <inlineHelpText>Check this box if a District or School will be submit a Combined Plan.</inlineHelpText>
        <label>Combined Plan</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Conga_AEC_UIP_SchView_Solution_URL__c</fullName>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PPCandRC]a0GF000000qsIYS,[TitleI]a0GF000000pxNxF,[TIGTransf]a0GF000000pxO1B,[TIGTurn]a0GF000000pxO6X,[TIGClosure]a0GF000000pxO8d?pv0=" + Id + 

"&amp;ReportID=[PYTarg]00OF0000005uo5H,[Challenges]00OF0000005uo5I,[RCause]00OF0000005uo5J,[MIS]00OF0000005uo5G,[Contacts]00OF0000006JtlP,[Trends]00OF0000005uo5Q,[Targets]00OF0000006f2Ja,[Turnaround]00OF0000005uo5B?pv0=" + Id + 

"&amp;ReportID=[ActStep]00OF0000005uo5F?pv0=" + Name + 
"&amp;TemplateID=a0HF000000Mgrp8," + Addenda_Template_ID__c + "{QVar0}" + 

"&amp;OFN=" + DIST_NUMBER__c + "-" + SCHOOL_NUMBER__c + 
"&amp;DefaultPDF=1" + 
"&amp;QVar0Id=a0GF000000py0tK" + 
"&amp;QVar0Format=10010" + 
"&amp;GoogleVisible​=1" + 
"&amp;OFP=" + "UIPDocuments2014" + 
"&amp;QMode=GoogleDrive"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: AEC UIP Sch View Solution URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_AEC_UIP_Solution_URL_DRIVE__c</fullName>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PYTAA]a04c0000004VHak,[PYTAG]a04c0000004VHap,[PYTAGG]a04c0000004VHau,[PPCandRC]a04c0000004VHaz,[TitleI]a04c0000003xSn8,[TIGTransf]a04c0000003xSnD,[TIGTurn]a04c0000003xSnX,[TIGClosure]a04c0000003xSnc?pv0=" + Id + 

"&amp;ReportID=[ActStep]00Oc0000000PYSS?pv0=" + Name + 

"&amp;ReportID=[PYTarg]00Oc0000000Podn,[Challenges]00Oc0000000PnIj,[RCause]00Oc0000000PnJw,[MIS]00Oc0000000PnK1,[Contacts]00OF0000006JtlP,[Trends]00Oc0000000PpCx,[TrendAA]00Oc0000000PnaO,[TrendAG]00Oc0000000PnaT,[TrendAGG]00Oc0000000PnaY,[TargSet]00Oc0000000Po8L,[TargAA]00Oc0000000Po86,[TargAG]00Oc0000000Po8B,[TargAGG]00Oc0000000Po8L,[TargPWR]00Oc0000000Po8G,[TargSE]00Oc0000000Pq2t,[DistSchTA]00Oc0000000PZz5?pv0=" + Id + 

"&amp;OFN=" + DIST_NUMBER__c + "-" + SCHOOL_NUMBER__c + " - Draft" + 
"&amp;TemplateID=a0HF000000Mgrp8," + Addenda_Template_ID__c + "{QVar0}" + 
"&amp;DefaultPDF=0" + 
"&amp;QVar0Id=a04c0000003xSwE" + 
"&amp;QVar0Format=10010" + 
"&amp;OFP=UIP + Documents" + 
"&amp;QMode=19"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: AEC UIP Solution URL DRIVE</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_AEC_UIP_Solution_URL__c</fullName>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PPCandRC]a0GF000000qsIYS,[TitleI]a0GF000000pxNxF,[TIGTransf]a0GF000000pxO1B,[TIGTurn]a0GF000000pxO6X,[TIGClosure]a0GF000000pxO8d?pv0=" + Id + 

"&amp;ReportID=[PYTarg]00OF0000005uo5H,[Challenges]00OF0000005uo5I,[RCause]00OF0000005uo5J,[MIS]00OF0000005uo5G,[Contacts]00OF0000006JtlP,[Trends]00OF0000005uo5Q,[Targets]00OF0000006f2Ja,[Turnaround]00OF0000005uo5B?pv0=" + Id + 

"&amp;ReportID=[ActStep]00OF0000005uo5F?pv0=" + Name + 
"&amp;TemplateID=a0HF000000Mgrp8," + Addenda_Template_ID__c + "{QVar0}" + 

"&amp;OFN=" + DIST_NUMBER__c + "-" + SCHOOL_NUMBER__c + " - Draft" + 
"&amp;DefaultPDF=1" + 
"&amp;QVar0Id=a0GF000000py0tK" + 
"&amp;QVar0Format=10010" + 
"&amp;QMode=1"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: AEC UIP Solution URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_AEC_UIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is automatically checked when the UIP document is ready to be generated.</description>
        <inlineHelpText>Box is automatically checked when the UIP document is ready to be generated.</inlineHelpText>
        <label>Conga: AEC UIP</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Conga_District_Template_IDs__c</fullName>
        <formula>IF(Gifted_Education_Complete__c=TRUE, "a0HF000000Mgsbx,", "")&amp;""&amp;
IF(Turnaround_Complete__c=TRUE, "a0HF000000Mgq82,", "")&amp;""&amp;
IF( Title_III_Complete__c = TRUE, "a0HF000000MgsbJ,", "")&amp;""&amp;
IF(ESEA_Complete__c=TRUE, "a0HF000000Mgsa6,", "")&amp;""&amp;
IF(Student_Grad_Completion_Plan_Complete__c=TRUE, "a0HF000000MgscW","")&amp;""&amp;
IF(Title_I_School_Wide_Complete__c =TRUE, "a0HF000000Mgptt,", "")&amp;""&amp; 
IF(TIG_Transformation_Complete__c=TRUE, "a0HF000000Mgpvf,", "")&amp;""&amp; 
IF(TIG_Turnaround_Complete__c=TRUE, "a0HF000000MgpwO,", "")&amp;""&amp; 
IF(TIG_Closure_Complete__c =TRUE, "a0HF000000Mgpxi", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: District Template IDs</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_District_UIP_Sch_Vie_Solution_URL__c</fullName>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PPCandRC]a0GF000000qsIYS,[GiftProg]a0GF000000py75q,[TitleIII]a0GF000000py7Bo,[SGCP]a0GF000000py7Da?pv0=" + Id + 

"&amp;ReportID=[ActStep]00OF0000005uo5F?pv0=" + Name + 

"&amp;ReportID=[PYTarg]00OF0000005uo5H,[Challenges]00OF0000005uo5I,[RCause]00OF0000005uo5J,[MIS]00OF0000005uo5G,[Contacts]00OF0000006JtlP,[Trends]00OF0000005uo5Q,[TargSet]00Oc0000000Po8L,[Targets]00OF0000006f2Ja,[DistSchTA]00OF0000005uo5B,[ESEAAdd]00OF0000005uo5C,[ESEATot]00OF0000005uo5D,[CombPlan]00OF0000005uo5E?pv0=" + Id + 

"&amp;TemplateID=a0HF000000MgrqG," + Conga_District_Template_IDs__c + "{QVar0}" + 
"&amp;OFN=" + DIST_NUMBER__c + 
"&amp;DefaultPDF=1" + 
"&amp;QVar0Id=a0GF000000py0tK" + 
"&amp;QVar0Format=10010" + 
"&amp;GoogleVisible​=1" + 
"&amp;OFP=" + "UIPDocuments2014" + 
"&amp;QMode=GoogleDrive"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: District UIP Sch Vie Solution URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_District_UIP_Solution_URL_DRIVE__c</fullName>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PPCandRC]a04c0000004VHaz,[GiftProg]a04c0000003npun,[TitleIII]a04c0000003t1ir,[SGCP]a04c0000003oLfe?pv0=" + Id + 

"&amp;ReportID=[ActStep]00Oc0000000PYSS?pv0=" + Name + 

"&amp;ReportID=[PYTarg]00Oc0000000Podn,[Challenges]00Oc0000000PnIj,[RCause]00Oc0000000PnJw,[MIS]00Oc0000000PnK1,[Contacts]00OF0000006JtlP,[Trends]00Oc0000000PpCx,[TrendAA]00Oc0000000PnaO,[TrendAG]00Oc0000000PnaT,[TrendAGG]00Oc0000000PnaY,[TargSet]00Oc0000000Po8L,[TargAA]00Oc0000000Po86,[TargAG]00Oc0000000Po8B,[TargAGG]00Oc0000000Po8L,[TargPWR]00Oc0000000Po8G,[DistSchTA]00Oc0000000PZz5,[ESEAAdd]00Oc0000000Pa53,[ESEATot]00Oc0000000PaC4,[CombPlan]00Oc0000000PqEm?pv0=" + Id + 

"&amp;TemplateID=a0HF000000MgrqG," + Conga_District_Template_IDs__c + "{QVar0}" + 
"&amp;OFN=" + DIST_NUMBER__c + " - Draft" + 
"&amp;DefaultPDF=0" + 
"&amp;QVar0Id=a04c0000003xSwE" + 
"&amp;QVar0Format=10010" + 
"&amp;OFP=UIP + Documents" + 
"&amp;QMode=19"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: District UIP Solution URL DRIVE</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_District_UIP_Solution_URL__c</fullName>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PPCandRC]a0GF000000qsIYS,[GiftProg]a0GF000000py75q,[TitleIII]a0GF000000py7Bo,[SGCP]a0GF000000py7Da,[TitleI]a0GF000000pxNxF,[TIGTransf]a0GF000000pxO1B,[TIGTurn]a0GF000000pxO6X,[TIGClosure]a0GF000000pxO8d?pv0=" + Id + 

"&amp;ReportID=[ActStep]00OF0000005uo5F?pv0=" + Name + 

"&amp;ReportID=[PYTarg]00OF0000005uo5H,[Challenges]00OF0000005uo5I,[RCause]00OF0000005uo5J,[MIS]00OF0000005uo5G,[Contacts]00OF0000006JtlP,[Trends]00OF0000005uo5Q,[TargSet]00Oc0000000Po8L,[Targets]00OF0000006f2Ja,[DistSchTA]00OF0000005uo5B,[ESEAAdd]00OF0000005uo5C,[ESEATot]00OF0000005uo5D,[CombPlan]00OF0000005uo5E?pv0=" + Id + 

"&amp;TemplateID=a0HF000000MgrqG," + Conga_District_Template_IDs__c + "{QVar0}" + 
"&amp;OFN=" + DIST_NUMBER__c + " - Draft" + 
"&amp;DefaultPDF=1" + 
"&amp;QVar0Id=a0GF000000py0tK" + 
"&amp;QVar0Format=10010" + 
"&amp;QMode=1"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: District UIP Solution URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_District_UIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is automatically checked when Conga UIP document is ready to be generated.
Workflow Rule:</description>
        <inlineHelpText>Box is automatically checked when Conga UIP document is ready to be generated.</inlineHelpText>
        <label>Conga: District UIP</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Conga_School_Sec_I_UIP_Solution_URL__c</fullName>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PITargetAAS]a04c0000003EcYG,[PITargetAG]a04c0000003Ed1h,[PITargetAGG]a04c0000003Ed2G,[PITargetPSWR]a04c0000003Ed2Q,[TrendAAS]a04c0000003EfoD,[TrendAG]a04c0000003Efrv,[TrendAGG]a04c0000003Efs0,[TrendPSWR]a04c0000003EfsA,[TargSetAAS]a04c0000003Efl9,[TargSetAG]a04c0000003EflJ,[TargSetAGG]a04c0000003EfmW,[TargSetPSWR]a04c0000003Efmv,[Contacts]00OF0000006JtlP,[TitleI]a04c0000003xSn8,[TIGTransf]a04c0000003xSnD,[TIGTurn]a04c0000003xSnX,[TIGClosure]a04c0000003xSnc?pv0=" + Id + 
"&amp;ReportID=[ActStep]00Oc0000000PYSS?pv0=" + Name + 
"&amp;ReportId=[DistSchTA]00Oc0000000PZz5?pv0=" + Id + 
"&amp;QVar0Id=a04c0000003xSwE"+ 
"&amp;TemplateID=a0HF000000MgnRS," + Addenda_Template_ID__c + "{QVar0}" + 
"&amp;OFN=" + DIST_NUMBER__c + "-" + SCHOOL_NUMBER__c + " - Draft" + 
"&amp;DefaultPDF=1" + 
"&amp;QMode=1" + 
"&amp;QVar0Id=a04c0000003xSwE" + 
"&amp;QVar0Format=10010"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: School Sec I UIP Solution URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_School_Template_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xConga School Template Flag</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Conga_School_UIP_Sch_View_Solution_URL__c</fullName>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PPCandRC]a0GF000000qsIYS,[TitleI]a0GF000000pxNxF,[TIGTransf]a0GF000000pxO1B,[TIGTurn]a0GF000000pxO6X,[TIGClosure]a0GF000000pxO8d?pv0=" + Id + 
"&amp;ReportID=[PYTarg]00OF0000005uo5H,[Challenges]00OF0000005uo5I,[RCause]00OF0000005uo5J,[MIS]00OF0000005uo5G,[Contacts]00OF0000006JtlP,[Trends]00OF0000005uo5Q,[Targets]00OF0000006f2Ja,[Turnaround]00OF0000005uo5B?pv0=" + Id + 
"&amp;ReportID=[ActStep]00OF0000005uo5F?pv0=" + Name + 
"&amp;TemplateID=a0HF000000MgnRS," + Addenda_Template_ID__c + "{QVar0}" + 
"&amp;OFN=" + DIST_NUMBER__c + "-" + SCHOOL_NUMBER__c + 
"&amp;DefaultPDF=1" + 
"&amp;QVar0Id=a0GF000000py0tK" + 
"&amp;QVar0Format=10010" + 
"&amp;GoogleVisible​=1" + 
"&amp;OFP=" + "UIPDocuments2014" + 
"&amp;QMode=GoogleDrive"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: School UIP Sch View Solution URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_School_UIP_Solution_URL_Attach__c</fullName>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PPCandRC]a0GF000000qsIYS,[TitleI]a0GF000000pxNxF,[TIGTransf]a0GF000000pxO1B,[TIGTurn]a0GF000000pxO6X,[TIGClosure]a0GF000000pxO8d?pv0=" + Id + 
"&amp;ReportID=[PYTarg]00OF0000005uo5H,[Challenges]00OF0000005uo5I,[RCause]00OF0000005uo5J,[MIS]00OF0000005uo5G,[Contacts]00OF0000006JtlP,[Trends]00OF0000005uo5Q,[Targets]00OF0000006f2Ja,[Turnaround]00OF0000005uo5B?pv0=" + Id + 
"&amp;ReportID=[ActStep]00OF0000005uo5F?pv0=" + Name + 
"&amp;TemplateID=a0HF000000MgnRS," + Addenda_Template_ID__c + "{QVar0}" + 
"&amp;OFN=" + DIST_NUMBER__c + "-" + SCHOOL_NUMBER__c + " - Draft" + 
"&amp;DefaultPDF=1" + 
"&amp;QVar0Id=a0GF000000py0tK" + 
"&amp;QVar0Format=10010" + 
"&amp;QMode=1"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: School UIP Solution URL Attach</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Conga_Test_URL__c</fullName>
        <formula>HYPERLINK("https://workflow.congamerge.com/?SessionId="
+ $Api.Session_ID + "&amp;ServerURL=" + $Api.Partner_Server_URL_290 +
 Conga_District_UIP_Sch_Vie_Solution_URL__c
, "District_Test")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Test URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Copy_from_Last_Year_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by ChooseUIP so that button only used once per UIP</description>
        <label>Copy from Last Year Done</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>DISTRICT_NAME__c</fullName>
        <label>District Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>District UIP</relationshipLabel>
        <relationshipName>UIP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>DIST_NUMBER__c</fullName>
        <label>Organization Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>December_Timeline__c</fullName>
        <label>December Timeline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Diagnostic_Review_Grant_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Review Grant</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Diagnostic_Review_Grant_Instructions__c</fullName>
        <description>Title I competitive grant that includes a diagnostic review and/or improvement planning support.</description>
        <inlineHelpText>Title I competitive grant that includes a diagnostic review and/or improvement planning support.</inlineHelpText>
        <label>Diagnostic Review Grant Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Diagnostic_Review_Grant_Type__c</fullName>
        <label>Diagnostic Review Grant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Diagnostic Review Grantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Diagnostic Review Grantee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Disag_Ach_Directions__c</fullName>
        <label>Disag Ach Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Disag_Growth_Directions__c</fullName>
        <label>Disag Growth Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>District_Only_Plan__c</fullName>
        <formula>IF(Combined_Plan__c=TRUE, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District Only Plan</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>District_UIP_for_Combined_Plans__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District UIP (for Combined Plans)</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>School UIPs (for Combined Plans)</relationshipLabel>
        <relationshipName>UIP1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>EMH_CODE__c</fullName>
        <label>EMH Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ESEA_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESEA Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ESEA_Progress_Status__c</fullName>
        <formula>if(  ESEA_Complete__c  =TRUE, "Ready to Submit","In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESEA Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ESEA__c</fullName>
        <label>ESEA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>E_ACH_PA_PCT_MATH__c</fullName>
        <label>Elem Math</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>E_ACH_PA_PCT_READ__c</fullName>
        <label>Elem Read</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>E_ACH_PA_PCT_SCI__c</fullName>
        <label>Elem Science</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>E_ACH_PA_PCT_WRITE__c</fullName>
        <label>Elem Write</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>E_GRO_AGP_ELP__c</fullName>
        <label>Elem AGP ELP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>E_GRO_AGP_MATH__c</fullName>
        <label>Elem AGP Math</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>E_GRO_AGP_READ__c</fullName>
        <label>Elem AGP Read</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>E_GRO_AGP_WRITE__c</fullName>
        <label>Elem AGP Write</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>E_GRO_MGP_ELP__c</fullName>
        <label>Elem MGP ELP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>E_GRO_MGP_MATH__c</fullName>
        <label>Elem MGP Math</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>E_GRO_MGP_READ__c</fullName>
        <label>Elem MGP Read</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>E_GRO_MGP_WRITE__c</fullName>
        <label>Elem MGP Write</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Early_Pathways_Grant_Text__c</fullName>
        <description>Districts and schools receiving the Pathways Grant must indicate strategies related to pathway planning process in the action plan.</description>
        <inlineHelpText>Districts and schools receiving the Pathways Grant must indicate strategies related to pathway planning process in the action plan.</inlineHelpText>
        <label>Early Pathways Grant Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Early_Pathways_Grant__c</fullName>
        <description>Districts and schools receiving the Pathways Grant must indicate strategies related to pathway planning process in the action plan.</description>
        <inlineHelpText>Districts and schools receiving the Pathways Grant must indicate strategies related to pathway planning process in the action plan.</inlineHelpText>
        <label>Early Pathways Grant</label>
        <picklist>
            <picklistValues>
                <fullName>Pathways Grantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Pathways Grantee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>External_Evaluator__c</fullName>
        <label>External Evaluator</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>FOCUS_DIRECTIONS__c</fullName>
        <label>Focus Directions</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>FOCUS_TYPE__c</fullName>
        <label>Focus Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Feedback_Question1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Investigates the most critical performance areas and prioritizes the most urgent performance challenges;</description>
        <label>Feedback_Question1</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Feedback_Question2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies root causes that explain the magnitude of the performance challenges;</description>
        <label>Feedback_Question2</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Feedback_Question3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies research-based major improvement strategies that have a likelihood to eliminate the root causes</description>
        <label>Feedback_Question3</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Focus_Title_I__c</fullName>
        <label>Focus Title I</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>GIFTED_DIRECTIONS__c</fullName>
        <label>Gifted Directions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>GIFTED_TYPE__c</fullName>
        <label>Gifted Type</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>GRAD_PLAN_DIRECTIONS__c</fullName>
        <label>Graduation Plan Description</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>GRAD_PLAN_TYPE__c</fullName>
        <label>Graduation Plan Type</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Gifted_Education_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gifted Education</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Gifted_Education_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gifted Education Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Gifted_Education_Progress_Status__c</fullName>
        <formula>if(  Gifted_Education_Complete__c  =TRUE, "Ready to Submit","In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifted Education Progress Status</label>
        <type>Text</type>
    </fields>    </recordTypes></CustomObject>